# bbx

./: .env.example  .gitignore  BBX_CONSOLE_SPEC_v1.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  FAQ.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  NOTICE  QUICK_START.md  README.md  SETUP_AND_TEST.py  analysis.html  api_server.py  bbx.schema.json  bbx_client.py  bbx_models.py  bbx_sync.py  build.bat  build.sh  cli.py  config.py  config.yaml  debug_output.txt  docker-compose.yml  generated.bbx  input.txt  mcp_config_example.json  mcp_servers.yaml  pyproject.toml  pytest.ini  requirements.txt  run_bbx_studio.bat  run_bbx_studio.sh  run_tests.py  setup.py  start.py  (+8 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml
bbx-console/: .env.example  README.md  docker-compose.yml
bbx-console/backend/: Dockerfile  init.sql  pytest.ini  requirements.txt
bbx-console/frontend/: Dockerfile  index.html  package.json  vite.config.ts
bbx-console/nginx/: nginx.conf
bbx-console/prometheus/: prometheus.yml
bbx-sdk/: README.md  __init__.py  client.py  config.py  models.py  requirements.txt  sync.py
bbx-sdk/examples/: basic_usage.py  sync_workflows.py
bbx_ui/: README.md  app.py
blackbox/: __init__.py
blackbox/a2a/: __init__.py  agent_card.py  client.py  models.py  server.py
blackbox/ai/: __init__.py  adapter_factory.py  generator.py  model_manager.py
blackbox/cache/: redis_backend.py
blackbox/cli/: __init__.py  help.py  package_commands.py  v2.py  wizard.py
blackbox/core/: __init__.py  audit.py  auth.py  base_adapter.py  bundler.py  cache.py  cache_integration.py  config.py  context.py  dag.py  events.py  exceptions.py  execution_manager.py  health.py  (+24 more)
designer/: Dockerfile  README.md  package.json
dev/: README.md  audit_core_files.py  build.bbx  check_imports.py  lint.bbx  release.bbx  simple_test.bbx  test.bbx  test_cli.py  test_universal.bbx  verify_docker_adapters.bbx  verify_universal.py
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_2_0.md  BBX_CONSOLE_UI_SPEC.md  BBX_SPEC_v6.md  DEPLOYMENT.md  GETTING_STARTED.md  GRAPHQL_API.md  INDEX.md  LOCAL_LLM_INTEGRATION.md  MCP_DEVELOPMENT.md  PLUGINS.md  REDIS_CACHE.md  REMOTE_EXECUTION.md  RUNTIME_INTERNALS.md  SCHEDULER.md  TROUBLESHOOTING.md  UNIVERSAL_ADAPTER.md  VERSIONING.md  WEBSOCKET.md
editor/: demo.html  index.html  mega_demo.html
examples/: api_demo.bbx  bbx_only_demo.bbx  crypto_monitor_v6.bbx  deploy.bbx  hello_world.bbx  mcp_demo.bbx  mega_mcp_demo.bbx  parallel_demo.bbx  perplexity.bbx  pipeline_cicd.bbx  poc_simple_alpine.bbx  poc_universal_kubectl.bbx  simple_demo.bbx  simple_telegram.bbx  telegram_demo.bbx  test_demo.bbx  test_logger.bbx  test_mcp_server.py  transform_demo.bbx  universal_database_migration.bbx  universal_gcp_database.bbx  universal_multi_step.bbx
k8s/: deployment.yaml  operator.yaml
k8s-operator/: Dockerfile  README.md
kernel/: Cargo.toml  README.md
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/boot/: mod.rs
kernel/src/cpu/: gdt.rs  mod.rs
kernel/src/drivers/: keyboard.rs  mod.rs  serial.rs  timer.rs
kernel/src/interrupts/: handlers.rs  mod.rs
kernel/src/memory/: frame_allocator.rs  heap.rs  mod.rs  paging.rs
kernel/src/scheduler/: mod.rs  ring.rs  task.rs
kernel/src/syscall/: mod.rs
marketplace/: api.py  marketplace_client.py  marketplace_server.py
nginx/: nginx.conf
plugins/: example_plugin.py
prometheus/: prometheus.yml
scripts/: README.md  debug_backend.bat  final_fix.bat  full_diagnostics.bat  generate_crazy_app.py  generate_with_llama.bat  rebuild_backend.bat  rebuild_frontend.bat  restart_backend.bat  show_backend_logs.bat  start_backend_local.bat  start_frontend_local.bat  start_ui.bat  verify_system.py  watch_logs.bat
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
tests/: README.md  browser_test.spec.ts  test_adapters.py  test_ai_adapter.py  test_app_generator_comprehensive.py  test_app_generator_e2e.py  test_bbx_advanced.py  test_bbx_api.py  test_bbx_constructor.py  test_bbx_full.py  test_bbx_integration.py  test_bbx_stress.py  test_cache.py  test_client.py  test_cloud_providers.py  test_codegen_e2e.py  test_dag.py  test_docker_adapter.py  test_dockerized_adapter.py  test_expressions.py  test_fs_adapter.py  test_infrastructure_adapters.py  test_mcp_client.py  test_os_abstraction.py  test_phase7_phase8.py  test_process_adapter.py  test_redis_cache.py  test_remote_execution.py  test_self_hosting_e2e.py  test_sync.py  test_template_adapter.py  test_universal_e2e.py  test_versioning.py  test_websocket.py
workflows/: crypto-alert.bbx  desktop_ui.bbx  example_http.bbx  hello-world.bbx
(+354 files in other folders)
