[package]
name = "bbx-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Makarov"]
description = "BBX OS Kernel - Operating System for AI Agents"
license = "BSL-1.1"

[dependencies]
# No std dependencies for bare-metal
spin = "0.9"              # Spinlocks for kernel
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"          # Bit manipulation
volatile = "0.5"          # Volatile memory access
x86_64 = "0.14"           # x86_64 specific functionality
uart_16550 = "0.3"        # Serial port driver
pic8259 = "0.10"          # Programmable Interrupt Controller
pc-keyboard = "0.7"       # Keyboard driver
linked_list_allocator = "0.10"  # Heap allocator
bootloader_api = "0.11"   # Bootloader interface

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[build-dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"           # Optimize for size

[package.metadata.bootloader]
physical-memory-offset = "0xFFFF_8000_0000_0000"
